# OnePizzeria2

./: .dockerignore  DATABASE_SCHEMA.md  Dockerfile  Makefile  ORDER_GUIDE.md  README.md  RESUMEN_MVP.md  RESUMEN_MVP_FINAL.md  TO-DO.md  cleanup_bot.py  config.example.env  config.py  demo_order_flow.py  demo_simple.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py  test_complete_memory_flow.py  test_duplicates.py  test_order_flow.py  test_real_db.py  test_simple_duplicates.py  test_supabase.py  test_tools_only.py
docs/: DATABASE_SCHEMA.md  PRODUCTION_GUIDE.md  TO-DO.md  WHATSAPP_SETUP.md
scripts/: cleanup_bot.py
src/: __init__.py  base_bot.py  bot.py  checkpointer.py  distance_calculator.py  handles.py  main.py  memory.py  models.py  prompts.py  state.py  supabase.py  telegram_bot.py  tools.py  whatsapp_bot.py  workflow.py
src/bots/: base_bot.py  telegram_bot.py  whatsapp_bot.py
src/core/: actions.py  checkpointer.py  memory.py  prompts.py  state.py  workflow.py
src/services/: distance_calculator.py  tools.py
tests/: simple_test.py  test.py  test_basic.py  test_complete_memory_flow.py  test_integration.py  test_message_duplication_fix.py  test_optimized_prompts.py  test_order_flow.py  test_product_tools.py  test_simple_product.py  test_single_product_tool.py  test_tools.py  test_tools_only.py  test_workflow.py
