[project]
name = "newonepizzeria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langchain-groq>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.5.1",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "supabase>=2.16.0",
    "Flask>=2.3.0",
    "requests>=2.31.0",
    "geopy>=2.4.0",
]
